# python-fast-api-template

./: pyproject.toml
app/: main.py
app/utils/: logger.py
