[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Nitesh Kumar Niranjan <nitesh@atlys.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
structlog = "^23.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
